fix community section alignment

--- a/src/styles/Community.css
+++ b/src/styles/Community.css
@@ -61,7 +61,7 @@
   display: flex;
   flex-direction: row;
   gap: 0 3vw;
-  margin: 5vh 0 0 26vw;
+  margin: 5vh 0 0 25vw;
   font-family: "Inter", sans-serif;
   color: var(--tezos-white);
 }
