--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -21,9 +21,9 @@
   text-decoration: none;
   cursor: pointer;
   font-family: "Poppins", sans-serif;
-  font-size: 14px ;
+  font-size: 14px;
 }
-.align-logo{
+.align-logo {
   width: 14vw;
 }
 .header .menu-icon {
@@ -92,7 +92,7 @@
   font-size: var(--font-size-semi-medium) !important;
   text-transform: inherit !important;
   border-radius: 5px;
-  margin-top: -10px!important;
+  margin-top: -10px !important;
 }
 
 /* menu */
@@ -130,8 +130,6 @@
   top: 0;
 }
 
-/* 48em = 768px */
-
 @media (min-width: 48em) {
   .header li {
     float: left;
@@ -155,25 +153,25 @@
     list-style: none;
     overflow: hidden;
   }
-  .align-logo{
+  .align-logo {
     margin-left: -8vw;
   }
-  .header-button{
+  .header-button {
     margin: -9vh 0 0 40vw !important;
   }
 }
-@media (min-width:320px) and (max-width:360px){
-  .align-logo{
+@media (min-width: 320px) and (max-width: 360px) {
+  .align-logo {
     margin-left: -10vw;
-    width:55vw;
+    width: 55vw;
   }
 }
-  @media (min-width:375px) and (max-width:411px){
-    .align-logo{
-      margin-left: -10vw !important;
-      width:55vw;
-    }
-    .header .menu-icon {
-      padding: 3vh 2vw;;
-    }
+@media (min-width: 375px) and (max-width: 411px) {
+  .align-logo {
+    margin-left: -10vw !important;
+    width: 55vw;
+  }
+  .header .menu-icon {
+    padding: 3vh 2vw;
+  }
 }
